Fixed Instruction Text being hidden behind navbar

--- a/src/index.css
+++ b/src/index.css
@@ -149,6 +149,10 @@ button {
 
 .InstructionText {
   color: var(--accent-color);
+
+  position: absolute;
+  top: 10vh;
+  left: 36%;
 }
 
 .MobileSupport {
